# rust-axum-cqrs-template

./: Cargo.toml  LICENSE
migrations/: 001_initial.sql
src/: error.rs  main.rs
src/adapters/postgres/: mod.rs
src/app/command/: create_user.rs
src/app/query/: get_hello_world.rs  get_user.rs
src/di/: mod.rs
src/ports/: mod.rs
src/ports/config/: mod.rs
src/ports/httpapi/: mod.rs
