[package]
name = "rust-axum-sqrs-template"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
dotenvy = "0.15.7"
envy = "0.4.2"
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = {version = "0.9.0-alpha.1", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "macros", "derive", "sqlite"]}
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
